# easyloops

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: index.html
easyloops/: __init__.py  bench.py  cli.py  clients.py  config.py  ledger.py  orchestrator.py  prompts.py  skills.py  tools.py  ui.py  worker.py
easyloops/skills/: json-storage.md  python-tests.md
paper/: loop_engineering.tex
tests/: test_smoke.py
